--- a/cluster/flux-system/gotk-sync.yaml
+++ b/cluster/flux-system/gotk-sync.yaml
@@ -17,11 +17,10 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: flux-system
-  namespace: flux-system
 spec:
-  interval: 10m0s
-  path: ./cluster
-  prune: true
+  interval: 5m0s
+  path: './cluster'
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
