--- a/cluster/flux-system/gotk-sync.yaml
+++ b/cluster/flux-system/gotk-sync.yaml
@@ -19,7 +19,7 @@ metadata:
   name: flux-system
 spec:
   interval: 5m0s
-  path: './cluster'
+  path: '.'
   prune: false
   sourceRef:
     kind: GitRepository
