--- a/flux-system/gotk-sync.yaml
+++ b/flux-system/gotk-sync.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   interval: 5m0s
   path: '.'
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
