--- a/flux-system/helmchart-repositories.yaml
+++ b/flux-system/helmchart-repositories.yaml
@@ -5,4 +5,12 @@ metadata:
   name: k8s-at-home
 spec:
   interval: 30m
-  url: https://k8s-at-home.com/charts/
+  url: https://k8s-at-home.com/charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: openebs
+spec:
+  interval: 30m
+  url: https://openebs.github.io/charts
