--- a/flux-system/telegram-notifications-provider.yaml
+++ b/flux-system/telegram-notifications-provider.yaml
@@ -8,3 +8,19 @@ spec:
   channel: "-489992479" # @channelname or "-1557265138" (channel id)
   secretRef:
     name: telegram-token
+---
+apiVersion: notification.toolkit.fluxcd.io/v1beta1
+kind: Alert
+metadata:
+  name: alerts
+spec:
+  providerRef: 
+    name: telegram
+  eventSeverity: info
+  eventSources:
+    - kind: GitRepository
+      name: '*'
+    - kind: Kustomization
+      name: '*'
+    - kind: Kustomization
+      name: '*'
