--- a/media/jellyfin.yaml
+++ b/media/jellyfin.yaml
@@ -61,7 +61,7 @@ spec:
     podSecurityContext:
       runAsUser: 568
       runAsGroup: 568
-      fsGroup: 65534
+      # fsGroup: 65534
       supplementalGroups:
       - 44
       - 109
