--- a/media/jellyfin.yaml
+++ b/media/jellyfin.yaml
@@ -11,7 +11,7 @@ spec:
         kind: HelmRepository
         name: k8s-at-home
         namespace: flux-system
-      version: '>=9.3.0'
+      version: '9.3.0'
   interval: 5m
   install:
     remediation:
