Add Microk8s kubelet path

--- a/storage/openebs.yaml
+++ b/storage/openebs.yaml
@@ -160,6 +160,8 @@ spec:
       enabled: false
     cstor:
       enabled: true
+      csiNode:
+        kubeletDir: "/var/snap/microk8s/common/var/lib/kubelet/"
       pool:
         image: openebs/cstor-pool
         imageTag: "3.1.0"
