--- a/flux-system/helmchart-repositories.yaml
+++ b/flux-system/helmchart-repositories.yaml
@@ -14,3 +14,11 @@ metadata:
 spec:
   interval: 30m
   url: https://openebs.github.io/charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: prometheus-community
+spec:
+  interval: 30m
+  url: https://prometheus-community.github.io/helm-charts
