--- a/media/media-rwx-pvc.yaml
+++ b/media/media-rwx-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: openebs-kernel-nfs
+  storageClassName: harddrive-nfs
   resources:
     requests:
       storage: 256Gi
