--- a/storage/kustomization.yaml
+++ b/storage/kustomization.yaml
@@ -4,5 +4,6 @@ namespace: storage
 resources:
   - namespace.yaml
   - openebs.yaml
-  - harddrive-cspc.yaml
-  - harddrive-sc.yaml
+  - openebs-nfs.yaml
+  - CStorPoolClusters.yaml
+  - StorageClasses.yaml
