--- a/flux-system/helmchart-repositories.yaml
+++ b/flux-system/helmchart-repositories.yaml
@@ -18,6 +18,14 @@ spec:
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
+  name: openebs-nfs
+spec:
+  interval: 30m
+  url: https://openebs.github.io/dynamic-nfs-provisioner
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
   name: prometheus-community
 spec:
   interval: 30m
