--- a/media/jellyfin.yaml
+++ b/media/jellyfin.yaml
@@ -38,15 +38,15 @@ spec:
         enabled: false
     persistence:
       config:
-        enabled: true
+        enabled: false
         type: pvc
         accessMode: ReadWriteOnce
-        size: 1Gi
+        size: 20Gi
         mountPath: /config
         storageClass: harddrive-disk
         retain: true
       cache: # Cache does NOT contain temporary transcoding data.
-        enabled: true
+        enabled: false
         type: pvc
         accessMode: ReadWriteOnce
         size: 20Gi
@@ -59,9 +59,9 @@ spec:
         existingClaim: media-storage
         mountPath: /media
     podSecurityContext:
-      # runAsUser: 568
-      # runAsGroup: 568
-      # fsGroup: 65534
+      runAsUser: 568
+      runAsGroup: 568
+      fsGroup: 65534
       supplementalGroups:
       - 44
       - 109
