--- a/media/kustomization.yaml
+++ b/media/kustomization.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: media
 resources:
   - namespace.yaml
-  - media-rwx-pvc.yaml
-  - jellyfin.yaml
-  - radarr.yaml
+#  - PersistentVolumeClaims.yaml
+#  - jellyfin.yaml
+#  - radarr.yaml
