--- a/storage/CStorPoolClusters.yaml
+++ b/storage/CStorPoolClusters.yaml
@@ -9,7 +9,6 @@ spec:
       dataRaidGroups:
         - blockDevices:
             - blockDeviceName: "blockdevice-2f01829c185d0181dfd0b26e9a56ef4f"  # 500GB HDD node-1
-          # - blockDeviceName: "blockdevice-efaf052576b8046630ae798a9ab3def8"  #   8TB HDD node-1
       poolConfig:
         dataRaidGroupType: "stripe"
     - nodeSelector:
@@ -26,5 +25,19 @@ spec:
         - blockDevices:
             - blockDeviceName: "blockdevice-e33c794ba1c0115a2d04f7deb2d500ea"  # 500GB HDD node-3
           # - blockDeviceName: "blockdevice-7668a6c0f103ed7d99b9a420529d3f7b"  # 500GB HDD node-3
+      poolConfig:
+        dataRaidGroupType: "stripe"
+---
+apiVersion: cstor.openebs.io/v1
+kind: CStorPoolCluster
+metadata:
+ name: harddrive-disk-pool-unsafe
+spec:
+  pools:
+    - nodeSelector:
+        kubernetes.io/hostname: "node-1"
+      dataRaidGroups:
+        - blockDevices:
+          - blockDeviceName: "blockdevice-efaf052576b8046630ae798a9ab3def8"  #   8TB HDD node-1
       poolConfig:
         dataRaidGroupType: "stripe"
