fix nfs-provisioner chart name

--- a/storage/openebs-nfs.yaml
+++ b/storage/openebs-nfs.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: openebs-nfs
   chart:
     spec:
-      chart: openebs-nfs
+      chart: nfs-provisioner
       sourceRef:
         kind: HelmRepository
         name: openebs-nfs
