--- a/storage/openebs.yaml
+++ b/storage/openebs.yaml
@@ -204,19 +204,16 @@ spec:
         # File permission changes are applied recursively if the root of the
         # volume's filesystem does not match the specified value.
         # For more information: https://github.com/openebs/dynamic-nfs-provisioner/blob/develop/docs/tutorial/file-permissions.md
-        filePermissions: {}
-        # The UID value is used to set the user-owner of NFS shared directory. Only valid
-        # UIDs are accepted.
-        # The ownership change is carried out recursively down the directory tree.
-        #  UID: ""
+        filePermissions:
+          UID: "65534"
         # The GID value is used to set the group-owner of NFS shared directory. Only valid
         # GIDs are accepted.
         # The ownership change is carried out recursively down the directory tree.
-        #  GID: ""
+          GID: "100"
         # The mode value is used to set the file mode of NFS shared directory. Both octals (e.g. 0744)
         # and incremental/decremental (e.g. "u+r", "o+rw") values are accepted.
         # The file mode change is carried out recursively down the directory tree.
-        #  mode: ""
+          mode: "0777"
 
         # Usually, below request and limits are good enough for NFS Server to work
         # seamlessly(IOs will be taken care by kerner space process i.e nfsd).
