--- a/storage/openebs-nfs.yaml
+++ b/storage/openebs-nfs.yaml
@@ -38,7 +38,7 @@ spec:
     nameOverride: ""
     nfsProvisioner:
       name: nfs-provisioner
-      enabled: true
+      enabled: false
       annotations: {}
       podLabels:
         name: openebs-nfs-provisioner
