--- a/flux-system/helmchart-repositories.yaml
+++ b/flux-system/helmchart-repositories.yaml
@@ -30,3 +30,11 @@ metadata:
 spec:
   interval: 30m
   url: https://prometheus-community.github.io/helm-charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: redhat-cop
+spec:
+  interval: 30m
+  url: https://redhat-cop.github.io/helm-charts
