correct helm chart

--- a/networking/keepalived-operator.yaml
+++ b/networking/keepalived-operator.yaml
@@ -9,7 +9,7 @@ spec:
       chart: keepalived-operator
       sourceRef:
         kind: HelmRepository
-        name: redhat-cop
+        name: keepalived-operator
         namespace: flux-system
   interval: 5m
   install:
