--- a/flux-system/helmchart-repositories.yaml
+++ b/flux-system/helmchart-repositories.yaml
@@ -38,3 +38,11 @@ metadata:
 spec:
   interval: 30m
   url: https://redhat-cop.github.io/helm-charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: keepalived-operator
+spec:
+  interval: 30m
+  url: https://redhat-cop.github.io/keepalived-operator
