--- a/flux-system/helmchart-repositories.yaml
+++ b/flux-system/helmchart-repositories.yaml
@@ -46,3 +46,11 @@ metadata:
 spec:
   interval: 30m
   url: https://redhat-cop.github.io/keepalived-operator
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: traefik
+spec:
+  interval: 30m
+  url: https://helm.traefik.io/traefik
