--- a/media/jellyfin.yaml
+++ b/media/jellyfin.yaml
@@ -37,6 +37,8 @@ spec:
       main:
         enabled: true
         primary: true
+        annotations:
+          traefik.ingress.kubernetes.io/router.entrypoints: web
         hosts:
           - host: media.linux.garden
             paths:
