--- a/networking/traefik-ingress-controller.yaml
+++ b/networking/traefik-ingress-controller.yaml
@@ -22,22 +22,7 @@ spec:
     service:
       enabled: true
       type: LoadBalancer
-      # Additional annotations applied to both TCP and UDP services (e.g. for cloud provider specific config)
-      annotations: {}
-      # Additional annotations for TCP service only
-      annotationsTCP: {}
-      # Additional annotations for UDP service only
-      annotationsUDP: {}
-      # Additional service labels (e.g. for filtering Service by custom labels)
-      labels: {}
-      # Additional entries here will be added to the service spec.
-      # Cannot contain type, selector or ports entries.
-      spec: {}
-        # externalTrafficPolicy: Cluster
-        # loadBalancerIP: "1.2.3.4"
-        # clusterIP: "2.3.4.5"
-      loadBalancerSourceRanges: []
-        # - 192.168.0.1/32
-        # - 172.16.0.0/16
+      annotations:
+        keepalived-operator.redhat-cop.io/keepalivedgroup: networking/keepalivedgroup
       externalIPs: 
         - 10.9.8.200
