--- a/networking/traefik-ingress-controller.yaml
+++ b/networking/traefik-ingress-controller.yaml
@@ -19,6 +19,9 @@ spec:
     deployment:
       enabled: true
       kind: DaemonSet
+    ingressClass:
+      enabled: true
+      isDefaultClass: true
     service:
       enabled: true
       type: LoadBalancer
